--- a/exercises/html/basics/exercise4b.html
+++ b/exercises/html/basics/exercise4b.html
@@ -10,7 +10,7 @@
             <li>orange1</li>
             <li>orange2</li>
             <li>orange3</li>
-               <ol type="A"  REVERSED>
+               <ol type="A"  REVERSED start= "26">
               <li>orange1</li>
               <li>orange2</li>
               <li>orange3</li>
