--- a/exercises/html/basics/exercise5.html
+++ b/exercises/html/basics/exercise5.html
@@ -42,7 +42,7 @@
 		</tr>
 
 		<tr>
-			<td rowspan="2"> Row 1-2,col 1 </td>
+			<td > Row 1-2,col 1 </td>
 		    <td> Row 1,col 2 </td>
 		    <td colspan="2"> Row 1,col 3 </td>
 		</tr>
