ex3 form modifid

--- a/exercises/html/forms/ex3.html
+++ b/exercises/html/forms/ex3.html
@@ -2,10 +2,10 @@
 <html>
 
 <body>
-  <center>
+  
 <form >
   
- <fieldset style="border: 2px solid ; width: 50%"> 
+ <fieldset > 
 	<legend> Personal details </legend>
 	First name
 	<input type="text"><br>
@@ -21,7 +21,7 @@
   </fieldset>
 
 
-   <fieldset style="border: 2px solid ; width: 50%">
+   <fieldset >
    <legend> Magazines</legend>
    <input type="checkbox" name="Magazines" >Stavanger  <br>
    <input type="checkbox" name="Magazines">Teknis<br>
@@ -30,7 +30,7 @@
    </fieldset>
   
 
-   <fieldset style="border: 2px solid ; width: 50%">
+   <fieldset>
    <legend> Subscription </legend>
    period:
    <select  size="1"  multiple>
@@ -43,6 +43,6 @@
 </fieldset>
    <input type="submit" >
 </form>
-</center>
+
 </body>
 </html>
