modified for all

--- a/exercises/css/positioning/ex3partIII.html
+++ b/exercises/css/positioning/ex3partIII.html
@@ -10,8 +10,8 @@ article{ width: 200px;
     height: 100px;
     background-color:   #A9B2C3 ;
      overflow: auto; 
-     display: inline-block;
-
+     float:left;
+     margin-right: 10px;
      overflow: hidden;
 
 }
