--- a/exercises/html/basics/exercise9.html
+++ b/exercises/html/basics/exercise9.html
@@ -5,10 +5,10 @@
 <body>
  <a href="https://github.com/" target="-blanck"><img src="https://raw.githubusercontent.com/MohammadJozaa7/web-development/master/exercises/html/basics/images/octocat.png"></a>
 
-  <a href="https://raw.githubusercontent.com/MohammadJozaa7/web-development/master/exercises/html/basics/images/octocat.png" target="-blanck"><img src="https://raw.githubusercontent.com/MohammadJozaa7/web-development/master/exercises/html/basics/images/octocat.png" width=25% ></a>
+  <a href="https://raw.githubusercontent.com/MohammadJozaa7/web-development/master/exercises/html/basics/images/octocat.png" target="-blanck"><img src="https://raw.githubusercontent.com/MohammadJozaa7/web-development/master/exercises/html/basics/images/octocat.png"  ></a>
 
 
-  <a href="https://raw.githubusercontent.com/MohammadJozaa7/web-development/master/exercises/html/basics/images/octocat.png" target="-blanck"><img src="https://raw.githubusercontent.com/MohammadJozaa7/web-development/master/exercises/html/basics/images/octocat.png" width=50px ></a>
+  <a href="https://raw.githubusercontent.com/MohammadJozaa7/web-development/master/exercises/html/basics/images/octocat.png" target="-blanck"><img src="https://raw.githubusercontent.com/MohammadJozaa7/web-development/master/exercises/html/basics/images/octocat.png"  ></a>
 
 </body>
 </html>
