--- a/exercises/css/selectors/exercise3.html
+++ b/exercises/css/selectors/exercise3.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Exercise #3: Styling boxes</title>
     <style>
         div {
             width: 50px;
             height: 50px;
             border: 1px solid black;
             margin: 5px;
-            float: left; /* float divs next to each other */
-            font-family: Verdana, sans-serif;
+            float: left;
+            font-family: Verdana,sans-serif;
             font-weight: bold;
-            line-height: 50px; /* align text vertically (this works only for a single line of text) */
+            line-height: 50px;
             text-align: center;
         }
+        .odd{ background-color: #ff3333 }
+        .Even{background-color: #0033cc}
+        #seven{color: white;}
+        .small{font-size:0.7em ;}
+        .big{font-size: 1.3em ; }
     </style>
 </head>
 <body>
-<div>1</div>
-<div>2</div>
-<div>3</div>
-<div>4</div>
-<div>5</div>
-<div>6</div>
-<div>7</div>
-<div>8</div>
-<div>9</div>
-<div>10</div>
+<div class="odd ; small">1</div>
+<div class="Even ; small">2</div>
+<div class="odd ; small">3</div>
+<div class="Even">4</div>
+<div class="odd">5</div>
+<div class="Even">6</div>
+<div class="odd" id="seven">7</div>
+<div class="Even ; big">8</div>
+<div class="odd ; big">9</div>
+<div class=" Even ; big">10</div>
 </body>
 </html>
