--- a/css-layouts/flex-box/sol1.html
+++ b/css-layouts/flex-box/sol1.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
 <style >
-	div{
+	#f{
 
 display: flex;
 	}
-div div{padding: 200px;
-}
+	
+
+#div1{background-color: red  ; padding: 200px}
+#div2{background-color: #513 ; padding: 200px}
+#div3{background-color: #983 ; padding: 200px}
+#div4{background-color: #6348 ; padding: 200px}
+
 </style>
 
 <body>
 <div id="f">
-<div style="background-color: red">i am flixbox 1</div>
-<div style="background-color: #513">i am flixbox 2</div>	
-<div style="background-color: #983">i am flixbox 3</div>
-<div style="background-color: #6348">i am flixbox 4</div>
+<div id="div1">iam flexbox 1</div>
+<div id="div2">iam flexbox 2</div>	
+<div id="div3">iam flexbox 3</div>
+<div id="div4">iam flexbox 4</div>
 </div>
 </body>
 </html>
