--- a/css-layouts/gridexercise/sel3grid.html
+++ b/css-layouts/gridexercise/sel3grid.html
@@ -1,32 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="refresh" content="1" >
 <style >
 	
 #con{
 	display: grid;
-	grid-template-columns:1fr 1fr;
+	grid-template-columns:1fr 6fr;
 	grid-template-rows: 1fr 1fr 1fr 1fr; 
-	grid-gap: 10px;
+	grid-gap:20px;
 	background-color: #2222;
-}
-#com{
-	background-color: white;
-grid-column: 1/2;
-grid-row: 1/3;
+	padding: 20px;
+
 }
 
+#con div{
+background-color: white;
+position:relative;
+
+}
+
+#com{
+/*	grid-column: 1/2;
+*/grid-row: 1/4;
+height: 120px;
+}
+
+.n{
+	height: 35px
+}
+
+
+#submit{
+
+	grid-row: 4/5;
+	grid-column: 2/3;
+	text-align: center;
+	top: -20px;
+
+}
+
+p{position:absolute; top: -30px}
 
 </style>
 </head>
 <body>
 <div id="con">
 
- com<div id="com"></div>	
-nam<div id="nam"></div>
-email<div id="email"></div>
-photo<div id="photo"></div>
-<div id="submit"> submit</div>
+ <!-- com -->
+ <div id="com"><p >com</p> </div>	
+<!-- nam -->
+<div class="n"> <p>name</p> </div>
+<!-- email -->
+<div class="n"><p>email</p> </div>
+<!-- photo -->
+<div id="photo"><p>Photo</p> </div>
+<div id="submit" style="background-color: gray;
+"> submit</div>
+
+
+
 
 </div>
 
