--- a/bootstrap/ex7.html
+++ b/bootstrap/ex7.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="refresh" content="1" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style >
-.bg-secondary{ height: 50%;  background-color: #555;}
+.bg-secondary{ height: 50%;  }
 
 .container{margin-top: 30px;}
 </style>
@@ -13,7 +14,7 @@
 
    <div class="row " >
     <div class="col-4 bg-secondary">
-<h1>Some Favorites</h1>
+<h6>Some Favorites</h6>
 <ul>
     <li><a href="#">Celery Root</a>
     </li>
@@ -25,7 +26,7 @@
 </div>
 
 <div class="col-8">
-<h1>Wild & Wacky Vegetables</h1>
+<h1 class="font-weight-bold">Wild & Wacky Vegetables</h1>
 <p>Kale courgette salsify mustard broccoli seakale wakame potato
     fava bean tigernut leek celery spinach avocado cabbage celtuce rutabaga
     kohlrabi. Parsnip pea soko groundnut bitterleaf spring onion. Grape
