--- a/bootstrap/ex6.html
+++ b/bootstrap/ex6.html
@@ -31,7 +31,7 @@
         <label for="birth_date">Date of birth:</label>
         <input type="date" name="birth_date" class="form-control" id="birth_date"/>
     </div class="form-group">
-    <input type="submit"  value="Add"/>
+    <input class="form-group" type="submit"  value="Add"/>
 </form>
 </body>
 </html>
